# [workspace]
# members = ["crates/*"]
# resolver = "2"

[package]
name = "luma"
version = "0.3.1"
edition = "2021"
description = "Link management to organize the internet ⚡"

[dependencies]
tui = { package = "ratatui", version = "0.26" }
crossterm = { version = "0.27", features = ["event-stream"] }
# clap = { version = "4", features = ["derive"] }
resu = { package = "error-stack", version = "0.4" }

serde = { version = "1.0", features = ["derive"] }
json = { package = "serde_json", version = "1" }
yaml = { package = "serde_yaml", version = "0.9" }
tempfile = "3"

simplelog = "0.12"
log = "0.4"
# pty = { path = "./crates/pty" }
pty-process = "0.4"

# camino = "1"
# indexmap = { version = "2", features = ["serde"] }

# mlua = { version = "0.9", features = ["luajit", "vendored"] }

# futures-executor = "0.3"
# futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
# lsp-types = { version = "0.94" }
# which = "4.4"
# parking_lot = "0.12.1"
# vorbis_rs = "0.5"
# directories = "5.0"
# fs_extra = "1.3"
# dunce = "1.0"
# mpd = "0.1.0"
# rand = "0.8"
# glam = "0.24"
# dirs.workspace = true
# id3.workspace = true                # = "1"
# image.workspace = true              # = "0.24"
# include_dir.workspace = true        # = "0.7"
# lofty.workspace = true              #  = "0.12"
# regex.workspace = true              #  = "^1.5.5"
# shellexpand = "3"
# sysinfo.workspace = true
# unicode-width.workspace = true      #   = "^0.1.8"
# urlencoding.workspace = true        #   = "2"
# viuer = { version = "0.6", features = ["sixel"] }
# ytd-rs.workspace = { version = "0.1", features = ["yt-dlp"]}
# walkdir.workspace = true   #   = "2"
# wildmatch.workspace = true #   = "2"
# opml.workspace = true #   = "1"
# chrono.workspace = true #   = "^0.4.23"
# rss.workspace = true #   = "2"
# rfc822_sanitizer.workspace = true #   = "0.3"
# ahash.workspace = true #   = "^0.8"
# semver.workspace = true #   = "^1"
# escaper.workspace = true  #   = "0.1.1"
# textwrap.workspace = true #   = "0.16"
# bytes.workspace = true #   = "1"
# unicode-segmentation.workspace = true #   = "1.10"
# sanitize-filename.workspace = true #   = "0.4"
# percent-encoding.workspace = true  #   = "2.2"
# tonic.workspace = true
# reqwest = { version="0.11", features = ["stream"] }
# pretty_assertions.workspace = true # = "1"
# hound = "3.4"
# ringbuf = "0.3"
