[package]
name = "luma"
version = "0.3.2"
edition = "2024"
description = "Link management to organize the internet ⚡"

[dependencies]
tui = { package = "ratatui", version = "0.26" }
crossterm = { version = "0.27", features = ["event-stream"] }
resu = { package = "error-stack", version = "0.4" }

serde = { version = "1.0", features = ["derive"] }
# yaml = { package = "serde_yaml", version = "0.9" }
json = { package = "serde_json", version = "1.0" }
tempfile = "3"

simplelog = "0.12"
log = "0.4"
